--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,19 @@ html {
 section {
   scroll-margin-top: 5rem;
 }
+
+/* Enable text selection globally */
+* {
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+
+/* Ensure experience section text is selectable */
+#experience * {
+  -webkit-user-select: text !important;
+  -moz-user-select: text !important;
+  -ms-user-select: text !important;
+  user-select: text !important;
+}
